--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Michelle</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi,my name is Michelle and I'm doing this bootcamp to further my skillset and gain employment</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I have an IT background in both network support and web design</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Art, crocheting, reading, family history research</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Web Design Consultant</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>In Adelaide</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>For the creativity available as a web developer</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/chelle77332">Github</a></li>
         </ul>
     </footer>
 </body>
