git commit index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
         <h1 class='masthead-heading'>Michelle</h1>
-    </header>
+    </header> Hall
     <section class="details">
       <h1>Introduction</h1>
       <p>Hi,my name is Michelle and I'm doing this bootcamp to further my skillset and gain employment</p>
