--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Michelle</h1>
-    </header> Hall
+        <h1 class='masthead-heading'>Michelle Hall</h1>
+    </header> 
     <section class="details">
       <h1>Introduction</h1>
       <p>Hi,my name is Michelle and I'm doing this bootcamp to further my skillset and gain employment</p>
