git add -M index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Where I'm From</h1>
       <p>I have an IT background in both network support and web design</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Art, crocheting, reading, family history research</p>
+      <p>Being creative through different mediums</p>
       <h1>What's your dream job?</h1>
       <p>Web Design Consultant</p>
       <h1>Where do you live?</h1>
